<resources>
    <string name="app_name">Taski</string>
    <string name="real_app_name">Taski Control Panel</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_add_task">Add Task</string>
    <string name="menu_settings">Settings</string>
    <string name="prefs">Preferences</string>
    <string name="advanced_prefs">@string/real_app_name</string>
    <string name="pref_config">config</string>
    <string name="pref_name">name</string>
    <string name="contact_send_message_ok">Sending messages is OK</string>
    <string name="contact_call_ok">Calling back is OK</string>

    <string name="message_template">
    This is an automated report from %1$s, sent on behalf of %2$s.\n
    Home address: %3$s\n
    Current estimated coordinates: %4$s\n
    Please %5$s call me.\n
    Please %6$s text me.\n
    Additional notes from %7$s: %8$s</string>
    <string name="message_template_do">feel free to</string>
    <string name="message_template_do_not">DO NOT</string>
    <string name="header_name">Name</string>
    <string name="header_address">Address</string>
    <string name="header_emergency_contacts">Emergency Contacts</string>
    <string name="header_actions">Actions</string>
    <string name="add_contact">Add a contact</string>
    <string name="add_action">Add an action</string>
    <string name="add_task">Add a task</string>
    <string name="add">Add</string>
    <string name="add_action_when">When you</string>
    <string name="add_action_contacts">Select contacts</string>
    <string name="add_action_custom_message">Additional note</string>
    <string name="add_action_title">Add action</string>
    <string name="add_action_do">Do the following</string>
    <string name="add_action_custom_number">Custom emergency number</string>
</resources>
