<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_action_when" />

        <Spinner
            android:id="@+id/add_action_trigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/triggers" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_action_do" />

        <Spinner
            android:id="@+id/add_action_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/actions" />

        <TextView
            android:id="@+id/add_action_contacts_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_action_contacts" />

        <ListView
            android:id="@+id/add_action_contacts"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            tools:listitem="@android:layout/simple_list_item_checked" />

        <TextView
            android:id="@+id/add_action_custom_message_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/add_action_custom_message"
            android:text="@string/add_action_custom_message" />

        <EditText
            android:id="@id/add_action_custom_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="5"
            android:minLines="5"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/add_action_custom_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/add_action_custom_number"
            android:text="@string/add_action_custom_number" />

        <EditText
            android:id="@id/add_action_custom_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <Button
            android:id="@+id/add_action_ok"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />


    </LinearLayout>
</ScrollView>